apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      enableServiceLinks: false
      serviceAccountName: homepage
      securityContext:
        runAsUser: 0
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config
          resources:
            limits:
              memory: 512Mi
              cpu: "500m"
            requests:
              memory: 128Mi
              cpu: "10m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homepage-config
